# pain

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  build.py  build.sh  copts.bzl  pain.py  xmake.lua  z.py
.github/workflows/: filter_lcov.sh  free_disk_space.sh  ubuntu.yml
deploy/: deploy.yml  hosts  init_cluster.sh
docs/cn/: contributing.md
docs/en/: contributing.md
examples/dpdk_hello_world/: BUILD
include/pain/: BUILD  controller.h  file_stream.h  file_system.h  pain.h  status.h
scripts/: env.sh  test_manusya.sh  test_pain_demo.sh
src/: xmake.lua
src/asura/: BUILD  asura_service_impl.cc  asura_service_impl.h  macro.h  main.cc  topology_service_impl.cc  topology_service_impl.h  xmake.lua
src/base/: BUILD  boost_assert.cc  brpc_text_map_carrier.h  bthread_local.h  bthread_local_context_storage.cc  bthread_local_context_storage.h  future.h  macro.h  plog.h  result.h  scope_exit.h  spdlog_sink.h  tracer.cc  tracer.h  types.h  uuid.h  xmake.lua
src/common/: BUILD  rocksdb_store.cc  rocksdb_store.h  rocksdb_txn.cc  rocksdb_txn.h  rocksdb_txn_store.cc  rocksdb_txn_store.h  rocksdb_util.h  store.h  txn.h  txn_manager.cc  txn_manager.h  txn_store.h  xmake.lua
src/core/: common.proto  manusya.proto  xmake.lua
src/deva/: BUILD  bridge.cc  bridge.h  container.h  container_op.cc  container_op.h  deva.cc  deva.h  deva_service_impl.cc  deva_service_impl.h  macro.h  main.cc  manusya_descriptor.h  namespace.cc  namespace.h  op.cc  op.h  rocksdb_store.cc  rocksdb_store.h  rsm.cc  rsm.h  store.h  xmake.lua
src/examples/: xmake.lua
src/manusya/: BUILD  bank.cc  bank.h  chunk.cc  chunk.h  file_handle.h  file_store.cc  file_store.h  local_store.cc  local_store.h  macro.h  main.cc  manusya_service_impl.cc  manusya_service_impl.h  (+5 more)
tools/: compile_commands.sh  copts.sh  linkopts.sh  sha256.sh  update_docker_source.sh
(+112 files in other folders)
