bazel_dep(name = "brpc", version = "1.14.0")
#bazel_dep(name = "dpdk", version = "24.03")
bazel_dep(name = "spdk", version = "24.09.02")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)
